--- a/css/styles.css
+++ b/css/styles.css
@@ -943,7 +943,7 @@ input {
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 1.5px;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     height: 56px;
     transition: background-color 250ms var(--transition);
